--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         it wont look like it was made in 1999.
     </p></div>
 
-    <div  class="FadeIn"><button>Test Button</button></div>
+    <button class="FadeIn">Test Button</button>
     <script src="Thing.js"></script>
 
 
