Current error with class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </p></div>
 
     <button class="FadeIn">Test Button</button>
-    <script src="Thing.js"></script>
+   
 
 
     <div class="Fadein"><h2>Cool Things to do in Drosia</h2></div>
@@ -31,11 +31,13 @@
       <div class="FadeImage"><img src="./view-of-drosia.jpg" alt="View of Drosia" class="Center"/></div>
 
       
-      <center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZNSk3OnKaI?si=JOLS9Rgq8LYF_vKf" 
-      title="YouTube video player" frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-      gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-      allowfullscreen></iframe></center>
+      <div class ="middle"><iframe width="560" height="315" src="https://www.youtube.com/embed/IZNSk3OnKaI?si=JOLS9Rgq8LYF_vKf" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen></iframe></div>
+
+      <script src="index.js"></script>
 </body>
 
 
