Finished centering the youtube video!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen></iframe></div>
 
-      <script src="index.js"></script>
+      <script src="thing.js"></script>
 </body>
 
 
