--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 
       <div class="FadeImage"><img src="./view-of-drosia.jpg" alt="View of Drosia" class="Center"/></div>
 
-      <script src="Thing.js"></script>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4tb7XVRCUzPKeNyhFsZotg?utm_source=generator" 
+      width="25%" height="152" frameBorder="0" allowfullscreen="" 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+      <iframe align="right" style="border-radius:12px"  src="https://open.spotify.com/embed/track/2uh88Sbc5kFNV8p2cfrFsP?utm_source=generator" 
+      width="25%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"> </iframe>
+
+      <script src="thing.js"></script>
     </body>
 
 
