--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
         width="25%"
 ></iframe>
 
+<div class="Fadein">
+  <p>Map of Drosia</p>
+</div>
+
+<div class ="middle"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.663431282158!2d21.74221452652561!3d37.91795792194969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135e29d93c5d3ea3%3A0x500bd2ce2bb41a0!2sDrosia%20250%2015%2C%20Greece!5e1!3m2!1sen!2sus!4v1717344622744!5m2!1sen!2sus"
+       width="600" 
+       height="450" 
+       style="border:0;" 
+       allowfullscreen="" 
+       loading="lazy" 
+       referrerpolicy="no-referrer-when-downgrade"
+></iframe></div>
+
+
 <script src="index.js"></script>
 </body>
 </html>
