Based weather api works!

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
        referrerpolicy="no-referrer-when-downgrade"
 ></iframe></div>
 
+<div class ="weather" >The current weather in Drosia is <span id="weatherloc"></span></div>
+
 
 <script src="index.js"></script>
 </body>
