So far ive made an about page and have a working link to it but I want to try and make the test button I made before be the link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <title>Nikos Village Website lol</title>
+    
     <link href="style.css" rel="styleSheet"/>
+     
 </head>
 
 <body>
@@ -13,11 +15,14 @@
 
 <div class="Fadein">
     <p>This is the test paragraph for the site. Maybe one day
-        it won't look like it was made in 1999.
+        it won't look like it was made in 1999. 
     </p>
 </div>
 
-<button class="FadeIn">Test Button</button>
+
+<button class="FadeIn">About</button>
+
+<a href=about.html>"about page!"</a>
 
 <div class="Fadein"><h2>Cool Things to do in Drosia</h2></div>
 
