Fixed the issue and added a new page!

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </div>
 
 
-<button class="FadeIn">About</button>
+<button class="FadeIn"><a href=about.html>About</a></button>
 
-<a href=about.html>"about page!"</a>
+
 
 <div class="Fadein"><h2>Cool Things to do in Drosia</h2></div>
 
