modified the second page a bit more and removed the underline on the button links

--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <h1>This is the about page!</h1>
+    <div class ="FadeIn"><h1>This is the about page!</h1></div>
+
+    <button class="FadeIn"><a href=index.html>Main Page</a></button>
 </body>
 
 
