tried to mess around with enviormental variables but I couldnt get it to work

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     </p>
 </div>
 
+<div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+
 <button class="FadeIn">Test Button</button>
 
 <div class="Fadein"><h2>Cool Things to do in Drosia</h2></div>
@@ -86,5 +95,7 @@
 
 
 <script src="index.js"></script>
+<script src="config.js" type="module"></script>
+
 </body>
 </html>
