Wether API works! But I still havent figured out how to hide the API key yet. Will do soon.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         style="border-radius:12px"
         width="25%"
 ></iframe>
+<div class ="weather" >The current weather in Drosia is <span id="weatherloc"></span></div>
 
 <script src="index.js"></script>
 </body>
